fixing dark mode

--- a/assets/sass/components/_dark-mode.sass
+++ b/assets/sass/components/_dark-mode.sass
@@ -10,11 +10,11 @@
         #portfolio
             .portfolio-group
                 .portfolio-card
-                    img 
+                    img
                         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
             .portfolio-grid
                 .portfolio-card
-                    img 
+                    img
                          box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
         #blog
             .blog
@@ -54,10 +54,13 @@
             .blog
                 .blog-card
                     color: white
+                    h2
+                        color: #51E3D4
         #blog-detail
             .breadcrumb
                 ul
                     li
+                        opacity: 1
                         a
                             color: white
                         a:hover
@@ -67,6 +70,17 @@
                 text-decoration: none
             a:hover
                 opacity: 0.7
+            .blog-title
+                .title
+                    h1
+                        color: #51E3D4
+            .blog-author
+                span
+                    opacity: 1
+                p
+                    opacity: 1
+            .blog-article
+                opacity: 1
         .coming-soon
             .coming-soon-group
                 h1
