--- a/assets/sass/pages/_journal-detail.sass
+++ b/assets/sass/pages/_journal-detail.sass
@@ -44,6 +44,7 @@
         span
             font-size: 14px
             opacity: 0.8
+            vertical-align: middle
         img
             max-width: 25px
             border-radius: 50%
